--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-overlay-menu": "^1.0.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
